--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -41,8 +41,11 @@ jobs:
             bsdmainutils \
             curl \
             libevent-dev \
-            libboost-dev \
-            python3
+            python3 \
+            libboost-system-dev \
+            libboost-filesystem-dev \
+            libboost-thread-dev \
+            libboost-chrono-dev
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
