--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -46,6 +46,7 @@ jobs:
             bsdmainutils \
             curl \
             python3 \
+            python3-pip \
             libevent-dev \
             libfmt-dev \
             libboost-program-options-dev \
@@ -55,6 +56,18 @@ jobs:
             libboost-chrono-dev \
             libboost-test-dev \
             libdb++-dev
+
+      - name: Install Python deps for functional tests (litecoin_scrypt)
+        run: |
+          python3 -m pip install --upgrade pip
+          # Prefer in-tree module if present; fallback to PyPI if available
+          if [ -d "test/functional/litecoin_scrypt" ] || [ -f "test/functional/litecoin_scrypt/setup.py" ] || [ -f "test/functional/litecoin_scrypt/pyproject.toml" ]; then
+            python3 -m pip install ./test/functional/litecoin_scrypt
+          elif [ -d "test/functional/test_framework/litecoin_scrypt" ] || [ -f "test/functional/test_framework/litecoin_scrypt/setup.py" ] || [ -f "test/functional/test_framework/litecoin_scrypt/pyproject.toml" ]; then
+            python3 -m pip install ./test/functional/test_framework/litecoin_scrypt
+          else
+            python3 -m pip install litecoin_scrypt
+          fi
 
       - name: autogen
         run: ./autogen.sh
@@ -74,9 +87,9 @@ jobs:
         env:
           LC_ALL: C
         run: |
-          test/functional/test_runner.py \
-            feature_drivechain_activation.py \
-            feature_drivechain_state.py
+          # Run directly so it doesn't depend on test_runner's internal allowlist
+          python3 test/functional/feature_drivechain_activation.py
+          python3 test/functional/feature_drivechain_state.py
 
   # ------------------------------------------------------------
   # 2) Build Linux binaries (depends flow)
@@ -176,7 +189,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ env.LITECOIN_CORE_VERSION }}-master-${{ env.SHORT_SHA }}
-          release_name: "Litecoin Core v${{ env.LITECOIN_CORE_VERSION }} (Linux x86_64) - master ${{ env.SHORT_SHA }}"
+          release_name: Litecoin Core v${{ env.LITECOIN_CORE_VERSION }} (Linux x86_64) - master ${{ env.SHORT_SHA }}
           draft: false
           prerelease: true
 
